--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.upper-header {
+  text-align: left;
+  /*color: rgb(124, 79, 167); use for other texts*/
+  color: rgb(38, 13, 61);
+}
+
+.container {
+  margin: 5% 2% 1% 2%;
+  background-color: #FFFFFF;
+  border: 1px solid grey;
+  border-radius: 20px;
+}
+
+.side-navbar {
+  position: sticky;
+  top: 25%;
+  right: 0;
+  position: fixed;
+  width: 20%;
+}
+
+.incont-navbar-month {
+  display: flex;
+  
 }
