--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,184 @@
 body {
   margin: 0;
+  background-color: #cacaca;
+  font-family:'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+  color: rgb(124, 79, 167);
 }
 
 .upper-header {
+  margin: 0;
+  height: 12%;
+}
+
+.top-header {
   text-align: left;
-  /*color: rgb(124, 79, 167); use for other texts*/
   color: rgb(38, 13, 61);
+  background-color: rgb(246 244 243);
+  position: fixed;
+  top: 0%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  z-index: 9;
+}
+
+.h1-title {
+  margin-right: 2%;
+}
+
+.searchbar {
+  border: 1px solid rgb(124, 79, 167);
+  border-radius: 3px;
+  padding: 1%;
+  font-size: large;
+}
+
+.lower-header {
+  text-align: center;
+  color: rgb(255, 255, 255);
+  background-color: rgb(38, 13, 61);
+  padding: 2px;
+}
+
+.even-lower-header {
+  text-align: center;
+  color: rgb(255, 255, 255);
+  background-color: rgb(81, 137, 93);
+}
+
+.lower-headers-container {
+  margin-top: 5%;
+}
+
+.even-lower-header h2 {
+  margin: 0%;
 }
 
 .container {
-  margin: 5% 2% 1% 2%;
-  background-color: #FFFFFF;
-  border: 1px solid grey;
+  margin: 1.5% 2% 1% 2%;
+  background-color: rgb(226, 226, 226);
+  border: 1px solid rgb(226, 226, 226);
   border-radius: 20px;
+  width: 92%;
 }
 
 .side-navbar {
-  position: sticky;
   top: 25%;
   right: 0;
   position: fixed;
-  width: 20%;
+  width: 8%;
+  background-color: rgb(246 244 243);
+  display: flex;
+  flex-direction: column;
+  padding: 1% 0%;
+  border: 3px solid rgb(246 244 243);
+  border-radius: 6px;
+}
+
+.navbar-month {
+  border: 3px solid rgb(124, 79, 167);
+  border-radius: 30px;
+  margin: 4% 0%;
+}
+
+.navbar-month:hover {
+  border: 3px solid rgb(124, 79, 167);
+  background-color: rgb(124, 79, 167);
+}
+
+.navbar-month a:hover{
+  color: azure;
+}
+
+.incont-navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0% 3%;
+}
+
+.incont-navbar-month:hover {
+  border: 3px solid rgb(124, 79, 167);
+  background-color: rgb(124, 79, 167);
+  color: azure;
+}
+
+.incont-navbar-month:hover a:hover {
+  color: azure;
 }
 
 .incont-navbar-month {
+  border: 3px solid rgb(124, 79, 167);
+  border-radius: 30px;
+  margin: 1% 1%;
+  width: 8%;
+}
+
+.content-month {
   display: flex;
-  
+  flex-direction: row;
+}
+
+.name-of-month {
+  color: azure;
+  position: relative;
+}
+
+.name-of-month-a {
+  color: azure;
+  position: absolute;
+  bottom: 93%;
+  left: 10%;
+}
+
+.name-of-month-a:hover {
+  color: azure;
+}
+
+
+.footer {
+  padding: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  width: 100%;
+  height: 304px;
+  background-color: #201633;
+
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  text-align: left;
+  font-size: large;
+}
+
+.products {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.single-item {
+  margin: 1%;
+  padding: 1%;
+  background-color: rgb(246 244 243);
+  border: 1px solid rgb(246 244 243);
+  border-radius: 10px;
+  width: 10%;
+}
+
+.item-name {
+  padding-top: 2%;
+  color: rgb(124, 79, 167);
 }
